apps/services/nitter/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nitter
  labels:
    app: nitter
  annotations:
    link.argocd.argoproj.io/external-link: https://twitter.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nitter
  template:
    metadata:
      labels:
        app: nitter
    spec:
      containers:
      - name: nitter
        image: docker.io/zedeus/nitter:38985af6ed30f050201b15425cdac0dc2e286b6d
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: nitter-conf
          mountPath: /src/nitter.conf
          readOnly: true
        livenessProbe:
          httpGet:
            path: /Jack/status/20
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /Jack/status/20
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 2
        securityContext:
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      volumes:
      - name: nitter-conf
        configMap:
          name: nitter-config
